# mongo-to-clickhouse

./: -docker-compose.yml-old  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.MD  config-dev.yml.example  config-prod.yml.example  docker-compose.yml  pg_init.psql
historical_data/: Cargo.toml
historical_data/src/: main.rs
src/: main.rs
