workspace = { members = ["historical_data"] }
[package]
name = "mongo-to-clickhouse"
version = "0.1.0"
edition = "2021"


[dependencies]
clickhouse-rs = "1.1.0-alpha.1"
config = "0.14.0"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
r2d2 = "0.8.10"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio-postgres = "0.7.10"
sha2 = "0.10.8"
hex = "0.4.3"
r2d2_postgres = "0.18.1"
futures = "0.3.30"
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0.81"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
serde_json = "1.0.114"
serde_yaml = "0.9.33"
rayon = "1.9.0"


[[bin]]
name = "mongo-to-clickhouse"
path = "src/main.rs"

[[bin]]
name = "historical_data"
path = "historical_data/src/main.rs"